# vuln-prioritizer-cli

./: .gitignore  .pre-commit-config.yaml  Applied_Security_Project_Python_CLI_Notion_Pack.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Codex_Handoff_Vuln_Prioritizer.md  Makefile  README.md  SECURITY.md  action.yml  mkdocs.yml  pyproject.toml  requirements.txt
.codex/skills/vuln-prioritizer-maintainer/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/examples/: README.md  code-scanning-sarif.yml  html-report-artifact.yml  pr-comment-report.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  testpypi.yml
data/: optional_attack_to_cve.csv  sample_cves.csv  sample_cves.txt  sample_cves_attack.txt  sample_cves_mixed.txt
data/attack/: attack_techniques_enterprise_16.1_subset.json  ctid_kev_enterprise_2025-07-28_attack-16.1_subset.json
data/benchmarks/: fixture_regressions.json  rollup_remediation_analysis.json  snapshot_diff_regressions.json
data/benchmarks/snapshots/: context_after.json  context_before.json  lifecycle_after.json  lifecycle_before.json
data/input_fixtures/: cyclonedx_bom.json  cyclonedx_vex.json  dependency_check_report.json  example_asset_context.csv  github_alerts_export.json  grype_report.json  nessus_report.nessus  normalization_contracts.json  openvas_report.xml  openvex_statements.json  spdx_bom.json  trivy_report.json
docs/: architecture.md  benchmarking.md  community_repository_setup.md  concept.md  contracts.md  evidence.md  example_attack_compare.md  example_attack_coverage.md  example_attack_explain.json  example_attack_navigator_layer.json  example_attack_report.md  example_compare.md  example_explain.json  example_report.md  executive_summary.md  index.md  methodology.md  reference_cve_prioritizer_gap_analysis.md  release_operations.md  roadmap.md  support_matrix.md  use_cases.md
docs/evidence/: current_state_audit.md  final_submission_checklist.md  screenshot_capture_list.md
docs/examples/: example_pr_comment.md  example_report.html  example_results.sarif  future_report.html  github_action_summary_templates.md
docs/integrations/: future_reporting_and_ci.md  reporting_and_ci.md
docs/playbooks/: ci_container_scanning.md  sbom_triage.md
docs/releases/: v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.3.0.md  v1.0.0.md  v1.1.0.md
docs/schemas/: analysis-report.schema.json  compare-report.schema.json  doctor-report.schema.json  evidence-bundle-manifest.schema.json  evidence-bundle-verification-report.schema.json  explain-report.schema.json  rollup-report.schema.json  snapshot-diff-report.schema.json  snapshot-report.schema.json
src/vuln_prioritizer/: __init__.py  cache.py  cli.py  config.py  models.py  parser.py  reporter.py  runtime_config.py  scoring.py  state_store.py  utils.py
src/vuln_prioritizer/inputs/: __init__.py  loader.py
src/vuln_prioritizer/providers/: attack.py  attack_metadata.py  ctid_mappings.py  epss.py  kev.py  nvd.py
src/vuln_prioritizer/services/: attack_enrichment.py  enrichment.py  prioritization.py  waivers.py
tests/: _input_fixture_contracts.py  conftest.py  test_attack_enrichment.py  test_benchmark_regressions.py  test_cache.py  test_cli.py  test_cli_attack.py  test_cli_data.py  test_cli_state.py  test_evidence_bundle_verification.py  test_input_fixtures.py  test_input_loader_contracts.py  test_output_schemas.py  test_parser.py  test_providers.py  test_reporter.py  test_rollup_regressions.py  test_runtime_config.py  test_scoring.py  test_snapshot_diff_regressions.py  test_state_store.py  test_v11_output_contracts.py
