[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vuln-prioritizer"
version = "0.2.0"
description = "CLI for prioritizing known CVEs with NVD, EPSS, and CISA KEV context."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "pydantic>=2.6,<3.0",
  "python-dotenv>=1.0,<2.0",
  "requests>=2.31,<3.0",
  "rich>=13.7,<14.0",
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2.0",
  "pre-commit>=3.7,<4.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.5,<1.0",
  "types-requests>=2.32,<3.0",
]

[project.scripts]
vuln-prioritizer = "vuln_prioritizer.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
